--- a/faq.html
+++ b/faq.html
@@ -1,127 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Verification -->
-  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
+    <!-- Google Verification -->
+    <meta
+      name="google-site-verification"
+      content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH"
+    />
 
-  <!-- MAIN TITLE -->
-  <title>FAQ • R7 Hub | Instagram Hashtag Generator Questions & Answers</title>
+    <!-- MAIN TITLE -->
+    <title>
+      FAQ • R7 Hub | Instagram Hashtag Generator Questions & Answers
+    </title>
 
-  <!-- MAIN SEO -->
-  <meta name="description" content="Frequently asked questions about the R7 Hub • Hashtag Ramzan free Instagram hashtag generator. Learn how to use the tool, how hashtags are generated, how often tags update and how to get better reach on reels and posts as an Indian creator.">
-  <meta name="keywords" content="faq, hashtag generator help, instagram hashtags questions, reels faq, R7 Hub faq, hashtag ramzan support" />
-  <meta name="author" content="Ramzan Ahmad" />
+    <!-- MAIN SEO -->
+    <meta
+      name="description"
+      content="Frequently asked questions about the R7 Hub • Hashtag Ramzan free Instagram hashtag generator. Learn how to use the tool, how hashtags are generated, how often tags update and how to get better reach on reels and posts as an Indian creator."
+    />
+    <meta
+      name="keywords"
+      content="faq, hashtag generator help, instagram hashtags questions, reels faq, R7 Hub faq, hashtag ramzan support"
+    />
+    <meta name="author" content="Ramzan Ahmad" />
 
-  <!-- OPEN GRAPH -->
-  <meta property="og:title" content="FAQ • R7 Hub | Hashtag Generator Help" />
-  <meta property="og:description" content="Questions and answers about the free R7 Hub Instagram hashtag generator for Indian creators." />
-  <meta property="og:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
-  <meta property="og:url" content="https://hashtagss.netlify.app/faq.html" />
-  <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+    <!-- OPEN GRAPH -->
+    <meta
+      property="og:title"
+      content="FAQ • R7 Hub | Hashtag Generator Help"
+    />
+    <meta
+      property="og:description"
+      content="Questions and answers about the free R7 Hub Instagram hashtag generator for Indian creators."
+    />
+    <meta
+      property="og:image"
+      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
+    />
+    <meta
+      property="og:url"
+      content="https://hashtagss.netlify.app/faq.html"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
 
-  <!-- TWITTER CARD -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="FAQ • R7 Hub | Hashtag Generator Help" />
-  <meta name="twitter:description" content="FAQ page for R7 Hub • Hashtag Ramzan hashtag generator." />
-  <meta name="twitter:image" content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg" />
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="FAQ • R7 Hub | Hashtag Generator Help"
+    />
+    <meta
+      name="twitter:description"
+      content="FAQ page for R7 Hub • Hashtag Ramzan hashtag generator."
+    />
+    <meta
+      name="twitter:image"
+      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
+    />
 
-  <!-- CANONICAL URL -->
-  <link rel="canonical" href="https://hashtagss.netlify.app/faq.html" />
+    <!-- CANONICAL URL -->
+    <link rel="canonical" href="https://hashtagss.netlify.app/faq.html" />
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            ramzan: "#22c55e",
-            r7dark: "#020617",
+    <!-- Tailwind -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              ramzan: "#22c55e",
+              r7dark: "#020617",
+            },
           },
         },
-      },
-    };
-  </script>
-</head>
+      };
+    </script>
+  </head>
 
   <body class="bg-r7dark text-slate-100">
-    
     <!-- NAVBAR (COMMON) -->
-<header class="sticky top-0 z-40 border-b border-slate-800 bg-r7dark/80 backdrop-blur">
-  <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
-      <!-- Left: Logo + text -->
-<a href="https://instagram.com/ramzan0043" target="_blank" 
-   class="flex items-center gap-3">
-
-  <div class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold">
-    R7
-  </div>
-
-  <div>
-    <p class="text-sm font-semibold tracking-tight">Hashtags</p>
-  </div>
-
-</a>
-
-
-     <!-- Desktop nav -->
-<nav class="hidden md:flex items-center gap-4 text-[13px]">
-  <a href="index.html" class="hover:text-ramzan transition">Home</a>
-  <a href="blog.html" class="hover:text-ramzan transition">Blog</a>
-  <a href="index.html#all" class="hover:text-ramzan transition">Hashtag Box</a>
-  <a href="about.html" class="hover:text-ramzan transition">About</a>
-  <a href="contact.html" class="hover:text-ramzan transition">Contact</a>
-  <a href="faq.html" class="hover:text-ramzan transition">FAQ</a>
-  <a href="privacy.html" class="hover:text-ramzan transition">Privacy</a>
-  <a href="terms.html" class="hover:text-ramzan transition">Terms</a>
-  <a href="disclaimer.html" class="hover:text-ramzan transition">Disclaimer</a>
-  <a href="sitemap.html" class="hover:text-ramzan transition">Sitemap</a>
-</nav>
-
-
-    <!-- Mobile menu button -->
-    <button
-      id="menuToggle"
-      class="md:hidden rounded-full border border-slate-700 bg-slate-900/70 p-2 text-slate-200"
-      aria-label="Menu"
+    <header
+      class="sticky top-0 z-40 border-b border-slate-800 bg-r7dark/80 backdrop-blur"
     >
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none"
-          viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-        <path stroke-linecap="round" stroke-linejoin="round"
-              d="M4 6h16M4 12h16M4 18h16" />
-      </svg>
-    </button>
-  </div>
+      <div
+        class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between gap-4"
+      >
+        <!-- Left: Logo + text -->
+        <a
+          href="https://instagram.com/ramzan0043"
+          target="_blank"
+          class="flex items-center gap-3"
+        >
+          <div
+            class="h-9 w-9 rounded-full bg-ramzan/20 flex items-center justify-center text-ramzan font-bold"
+          >
+            R7
+          </div>
 
-  <!-- Mobile nav dropdown -->
-  <div
-    id="mobileMenu"
-    class="md:hidden hidden border-t border-slate-800 bg-r7dark/95 px-4 pb-3 pt-2 text-xs"
-  >
-    <div class="flex flex-col gap-2">
-      <a href="index.html" class="py-1 text-slate-100">🏠 Home</a>
-      <a href="blog.html" class="py-1 text-slate-200">📚 Blog</a>
-      <a href="index.html#all" class="py-1 text-slate-200">#️⃣ Hashtag Box</a>
-      <a href="about.html" class="py-1 text-slate-200">👤 About</a>
-      <a href="contact.html" class="py-1 text-slate-200">📩 Contact</a>
+          <div>
+            <p class="text-sm font-semibold tracking-tight">Hashtags</p>
+          </div>
+        </a>
 
-      <div class="h-px bg-slate-800 my-1"></div>
-      <a href="faq.html" class="py-1 text-slate-300">❓ FAQ</a>
-      <a href="privacy.html" class="py-1 text-slate-300">🛡 Privacy Policy</a>
-      <a href="terms.html" class="py-1 text-slate-300">📜 Terms & Conditions</a>
-      <a href="disclaimer.html" class="py-1 text-slate-300">⚠ Disclaimer</a>
-      <a href="sitemap.html" class="py-1 text-slate-300">🗺 Sitemap</a>
-    </div>
-  </div>
-</header>
+        <!-- Desktop nav -->
+        <nav class="hidden md:flex items-center gap-4 text-[13px]">
+          <a href="index.html" class="hover:text-ramzan transition">Home</a>
+          <a href="blog.html" class="hover:text-ramzan transition">Blog</a>
+          <a href="index.html#all" class="hover:text-ramzan transition">
+            Hashtag Box
+          </a>
+          <a href="about.html" class="hover:text-ramzan transition">About</a>
+          <a href="contact.html" class="hover:text-ramzan transition">
+            Contact
+          </a>
+          <a href="faq.html" class="hover:text-ramzan transition">FAQ</a>
+          <a href="privacy.html" class="hover:text-ramzan transition">
+            Privacy
+          </a>
+          <a href="terms.html" class="hover:text-ramzan transition">Terms</a>
+          <a href="disclaimer.html" class="hover:text-ramzan transition">
+            Disclaimer
+          </a>
+          <a href="sitemap.html" class="hover:text-ramzan transition">
+            Sitemap
+          </a>
+        </nav>
 
+        <!-- Mobile menu button -->
+        <button
+          id="menuToggle"
+          class="md:hidden rounded-full border border-slate-700 bg-slate-900/70 p-2 text-slate-200"
+          aria-label="Menu"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-4 w-4"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
+      </div>
+
+      <!-- Mobile nav dropdown -->
+      <div
+        id="mobileMenu"
+        class="md:hidden hidden border-t border-slate-800 bg-r7dark/95 px-4 pb-3 pt-2 text-xs"
+      >
+        <div class="flex flex-col gap-2">
+          <a href="index.html" class="py-1 text-slate-100">🏠 Home</a>
+          <a href="blog.html" class="py-1 text-slate-200">📚 Blog</a>
+          <a href="index.html#all" class="py-1 text-slate-200">
+            #️⃣ Hashtag Box
+          </a>
+          <a href="about.html" class="py-1 text-slate-200">👤 About</a>
+          <a href="contact.html" class="py-1 text-slate-200">📩 Contact</a>
+
+          <div class="h-px bg-slate-800 my-1"></div>
+          <a href="faq.html" class="py-1 text-slate-300">❓ FAQ</a>
+          <a href="privacy.html" class="py-1 text-slate-300">
+            🛡 Privacy Policy
+          </a>
+          <a href="terms.html" class="py-1 text-slate-300">
+            📜 Terms &amp; Conditions
+          </a>
+          <a href="disclaimer.html" class="py-1 text-slate-300">
+            ⚠ Disclaimer
+          </a>
+          <a href="sitemap.html" class="py-1 text-slate-300">🗺 Sitemap</a>
+        </div>
+      </div>
+    </header>
 
     <!-- MAIN -->
-    <main class="max-w-4xl mx-auto px-4 py-10 text-xs sm:text-sm space-y-8">
+    <main
+      class="max-w-4xl mx-auto px-4 py-10 text-xs sm:text-sm space-y-8"
+    >
       <header class="space-y-2 border-b border-slate-800 pb-4">
         <p class="text-[11px] text-ramzan uppercase tracking-[0.25em]">
           FAQ
@@ -135,7 +199,9 @@
       </header>
 
       <section class="space-y-4">
-        <div class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 space-y-2">
+        <div
+          class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 space-y-2"
+        >
           <h2 class="text-sm sm:text-base font-semibold">
             1. Ye website kis cheez ke liye hai?
           </h2>
@@ -146,19 +212,25 @@
           </p>
         </div>
 
-        <div class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 space-y-2">
+        <div
+          class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 space-y-2"
+        >
           <h2 class="text-sm sm:text-base font-semibold">
             2. Hashtag Box free hai ya paid?
           </h2>
           <p class="text-slate-300">
             Abhi jo hashtag sets hai, woh sab completely free hai. Tum directly
-            copy karke apne Instagram, Facebook, YouTube content me use kar sakte ho.
+            copy karke apne Instagram, Facebook, YouTube content me use kar
+            sakte ho.
           </p>
         </div>
 
-        <div class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 space-y-2">
+        <div
+          class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 space-y-2"
+        >
           <h2 class="text-sm sm:text-base font-semibold">
-            3. Kya main tumse personally help / collab ke liye contact kar sakta hoon?
+            3. Kya main tumse personally help / collab ke liye contact kar sakta
+            hoon?
           </h2>
           <p class="text-slate-300">
             Haan, basic collab / questions ke liye tum Instagram ya email se
@@ -167,18 +239,22 @@
           </p>
         </div>
 
-        <div class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 space-y-2">
+        <div
+          class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 space-y-2"
+        >
           <h2 class="text-sm sm:text-base font-semibold">
             4. Kya ye website official course / coaching hai?
           </h2>
           <p class="text-slate-300">
-            Nahi. Ye koi official coaching, institute ya company ka site nahi hai.
-            Bas ek individual creator ka space hai jo apni life & learning ko
-            public me document kar raha hai.
+            Nahi. Ye koi official coaching, institute ya company ka site nahi
+            hai. Bas ek individual creator ka space hai jo apni life &amp;
+            learning ko public me document kar raha hai.
           </p>
         </div>
 
-        <div class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 space-y-2">
+        <div
+          class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 space-y-2"
+        >
           <h2 class="text-sm sm:text-base font-semibold">
             5. Agar mujhe koi galti dikhe to kya karun?
           </h2>
@@ -189,46 +265,48 @@
         </div>
 
         <p class="text-[11px] text-slate-500">
-          Aur question hai? <a href="contact.html" class="text-ramzan underline">Contact page</a> se message drop kar sakte ho.
+          Aur question hai?
+          <a href="contact.html" class="text-ramzan underline">
+            Contact page
+          </a>
+          se message drop kar sakte ho.
         </p>
       </section>
     </main>
 
     <!-- FOOTER -->
     <footer class="border-t border-slate-800 py-4 mt-6">
-  <div class="max-w-6xl mx-auto px-4 text-[11px] text-slate-500 flex flex-col sm:flex-row items-center justify-between gap-2">
-    <p>© <span id="year"></span> Ramzan • R7 Hub.</p>
-    <p class="space-x-2">
-      <a href="index.html" class="text-ramzan">Home</a> •
-      <a href="blog.html" class="text-ramzan">Blog</a> •
-      <a href="about.html" class="text-ramzan">About</a> •
-      <a href="privacy.html" class="text-ramzan">Privacy</a> •
-      <a href="terms.html" class="text-ramzan">Terms</a> •
-      <a href="disclaimer.html" class="text-ramzan">Disclaimer</a> •
-      <a href="sitemap.html" class="text-ramzan">Sitemap</a>
-    </p>
-  </div>
-</footer>
+      <div
+        class="max-w-6xl mx-auto px-4 text-[11px] text-slate-500 flex flex-col sm:flex-row items-center justify-between gap-2"
+      >
+        <p>© <span id="year"></span> Ramzan • R7 Hub.</p>
+        <p class="space-x-2">
+          <a href="index.html" class="text-ramzan">Home</a> •
+          <a href="blog.html" class="text-ramzan">Blog</a> •
+          <a href="about.html" class="text-ramzan">About</a> •
+          <a href="privacy.html" class="text-ramzan">Privacy</a> •
+          <a href="terms.html" class="text-ramzan">Terms</a> •
+          <a href="disclaimer.html" class="text-ramzan">Disclaimer</a> •
+          <a href="sitemap.html" class="text-ramzan">Sitemap</a>
+        </p>
+      </div>
+    </footer>
 
+    <script>
+      // Mobile menu toggle (COMMON)
+      const menuToggle = document.getElementById("menuToggle");
+      const mobileMenu = document.getElementById("mobileMenu");
+      if (menuToggle && mobileMenu) {
+        menuToggle.addEventListener("click", () => {
+          mobileMenu.classList.toggle("hidden");
+        });
+      }
 
- <script>
-  // Mobile menu toggle (COMMON)
-  const menuToggle = document.getElementById("menuToggle");
-  const mobileMenu = document.getElementById("mobileMenu");
-  if (menuToggle && mobileMenu) {
-    menuToggle.addEventListener("click", () => {
-      mobileMenu.classList.toggle("hidden");
-    });
-  }
-
-  // Year (agar span id="year" use kar rahe ho to)
-  const yearSpan = document.getElementById("year");
-  if (yearSpan) {
-    yearSpan.textContent = new Date().getFullYear();
-  }
-</script>
-
+      // Year
+      const yearSpan = document.getElementById("year");
+      if (yearSpan) {
+        yearSpan.textContent = new Date().getFullYear();
+      }
+    </script>
   </body>
 </html>
-
-
